# pic_to_char

./: .gitignore
cpp/: CMakeLists.txt  CMakeSettings.json
cpp/include/: CharPic.h  CharVideo.h  Pic.h  PicProcess.h
cpp/src/: CharPic.cpp  CharVideo.cpp  Pic.cpp  PicProcess.cpp  main.cpp
python/: CharPic.py  CharVideo.py  ColorPic.py  Edgepic.py  GrayPic.py  Pic.py  PicProcess.py  char_matrix.txt  main.py
